--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
 html {
     font-size: 62.5%;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 html::-webkit-scrollbar {
@@ -357,6 +358,124 @@ nav li:first-child {
     text-align: center;
     font-weight: bold;
 }
+
+
+
+/*======================== Study Material ======================== */
+
+
+
+
+
+.folder-container {
+    background-color: #fff;
+    border: 2px solid #e0e0e0;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.folder h2 {
+    color: #333;
+    font-size: 24px;
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+.folder ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.folder ul li {
+    margin: 8px 0;
+}
+
+.folder ul li a {
+    text-decoration: none;
+    color: #007bff;
+    font-size: 18px;
+}
+
+.folder ul li a:hover {
+    text-decoration: underline;
+}
+
+/* Responsive Design */
+@media (max-width: 600px) {
+    .folder h2 {
+        font-size: 20px;
+    }
+
+    .folder ul li a {
+        font-size: 16px;
+    }
+}
+
+
+
+.pdf-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    width: 80%;
+    max-width: 800px;
+}
+
+.pdf-preview {
+    margin-bottom: 20px;
+    position: relative;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.preview-embed {
+    width: 100%;
+    height: 400px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.pdf-preview:hover {
+    transform: scale(1.05);
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.1);
+}
+
+.pdf-controls {
+    text-align: center;
+}
+
+.download-button {
+    text-decoration: none;
+    background-color: #007bff;
+    color: white;
+    padding: 12px 24px;
+    border-radius: 5px;
+    font-size: 16px;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+}
+
+.download-button:hover {
+    background-color: #0056b3;
+    cursor: pointer;
+}
+
+/* Responsive for smaller devices */
+@media (max-width: 768px) {
+    .pdf-container {
+        width: 95%;
+    }
+
+    .preview-embed {
+        height: 300px;
+    }
+}
+
+
+
+
+
 
 /* ----------- CONTACT  US ----------------- */
 
